<resources>
    <string name="app_name">ArPi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_name">Name</string>
    <string name="label_project_name">Project Name</string>
    <string name="label_hardware">Hardware</string>
    <string name="label_notes">Notes</string>
    <string name="label_lorem_ipsum">Lorem ipsum</string>
    <string name="label_addproject_spacing">"A  d  d    P  r  o  j  e  c  t"</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_next">Next</string>
    <string name="label_last_modified">last modified</string>
</resources>
