<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEEE"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:gravity="start"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:text="@string/label_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:paddingStart="64dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:background="@null"
                android:hint="@string/label_project_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:gravity="start"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:text="@string/label_hardware"/>

            <TextView
                android:id="@+id/addproject_tv_hardware_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_logo_arduino"
                android:drawableStart="@mipmap/ic_logo_arduino"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:gravity="start|center_vertical"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:paddingLeft="40dp"
                android:paddingRight="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:gravity="start"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:text="@string/label_notes"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textSize="20sp"
                android:gravity="top|start"
                android:layout_marginTop="4dp"
                android:paddingStart="64dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:background="@null"
                android:hint="@string/label_lorem_ipsum"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addproject_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFB6D7A8"
                android:text="@string/label_next"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>